fix gap and put edges behind nodes

--- a/web/graph.css
+++ b/web/graph.css
@@ -1,5 +1,5 @@
 g.node circle {
-    fill: none;
+    fill: white;
     stroke: black;
     stroke-width: 1.5px;
 }
